# verification-tooling

./: CITATION.cff  CLAUDE.md  LICENSE  Makefile  README.md  flake.nix  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: main-gate.yml  nix-build.yml  pr-gate.yml
.internal/: README.md
.internal/plan/: BUILD_PLAN.md  README.md  manifest-v2-changes.md  spec.md
.internal/recon/: gh200-nic-info.txt
cmd/prover/: main.py
cmd/verifier_cli/: main.py
conformance/: RELEASE_BLOCKERS.json
demo/: run_demo.py
demos/tap-protocol/: .gitignore  EXPERIMENT_LOG.md  client.py  plan.md  qwen3-1.7b-tap.manifest.json
demos/tap-train/: EXPERIMENT_LOG.md  client.py  plan.md
deploy/lambda/: run.sh  serve.sh  start_server.sh  verify.sh
docs/: use-cases.md
docs/conformance/: CI_GATES.md  CONFORMANCE_CHECKLIST.md  SPEC_REVIEW.md  spec_requirements.v1.json
docs/plans/: repo-modularization.md
experiments/deterministic-cuda-graphs/: EXPERIMENT_LOG.md  plan.md
experiments/freivalds-attestation/: EXPERIMENT_LOG.md  NARRATIVE.md  plan.md
experiments/multinode-determinism/: plan.md  tiers.md
experiments/prover-verifier-demo/: EXPERIMENT_LOG.md  plan.md  pyrightconfig.json  ruff.toml  viewer.html
modules/: README.md  __init__.py  _cmd.py  pipeline.py
modules/attestation/: README.md  __init__.py  api.py
modules/core/: __init__.py
modules/inference/: README.md  __init__.py  api.py
modules/memory/: README.md  __init__.py  api.py
modules/network/: README.md  __init__.py  api.py
modules/network/native/libnetdet/: CMakeLists.txt
modules/network/native/libnetdet/src/: netdet.c  netdet.h
modules/network/native/libnetdet/tests/: test_netdet.c
modules/utils/: README.md  __init__.py  api.py
nix/: flake.from-source.nix
pkg/freivalds/: __init__.py  check.py  prng.py  prover.py  spec.py  streaming.py  verifier.py
pkg/proverdet/: attestation_store.py  replay.py  scheduler.py  verdict.py  workload_runner.py
schemas/: freivalds_attestation.v1.schema.json  freivalds_challenge.v1.schema.json
scripts/: demo.sh  e2e_verify.py  reproduce.sh
scripts/ci/: check_conformance_catalog.py  check_release_blockers.py  d0_schema_determinism.sh  d1_build_determinism.sh  d2_single_node_runtime_determinism.sh  d3_replicated_node_determinism.sh  d4_batch_order_invariance.sh  d4_tp_pp_determinism.sh  d4_tp_runtime_determinism.sh  d5_network_determinism.sh  d6_multinode_determinism.sh  fixture_validate.py  lint.sh  lockfile_validate.py  run_proverdet_lint.sh  (+6 more)
tests/: helpers.py
workflows/: README.md  RECIPE_BOOK.md  __init__.py  deterministic_inference_server.py  deterministic_lora_training.py  verified_inference.py
(+308 files in other folders)
