[project]
name = "deterministic-serving-stack"
version = "0.1.0"
description = "Bitwise-deterministic LLM inference — CPU/test dependency set."
requires-python = ">=3.10"
# Core runtime deps for the CPU path, the Pipeline, the resolver/builder, and the
# CI gates. torch + vLLM are intentionally NOT here: they are CUDA-specific
# (cu128 wheels, GPU-only) and provisioned separately on an NVIDIA box by
# scripts/demo.sh. The real GPU-runtime pin is the Nix closure, not pip.
dependencies = [
    "pydantic",
    "jsonschema",
]

# Dev/test deps (installed by default with `uv sync`): property-based tests and
# the plotting scripts the suite subprocesses.
[dependency-groups]
dev = [
    "hypothesis",
    "matplotlib",
    "ruff",
]

# This repo is an application (modules/ + workflows/), not a pip-installable
# package — uv manages the environment but does not try to build/install it.
[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py310"
# experiments/ is research code with its own conventions; lint the product surface.
extend-exclude = ["experiments", ".venv"]

[tool.ruff.lint]
# Default rule set (pyflakes F + pycodestyle E4/E7/E9), minus carve-outs for this
# repo's intentional patterns and a few style nits not yet enforced:
#   E402 — modules set sys.path and the c3 determinism env BEFORE importing
#          torch/vllm, so module-level imports legitimately follow code.
#   F841/E731/E741 — minor style; deferred (incremental adoption).
ignore = ["E402", "F841", "E731", "E741"]
